dnl Process this file with autoconf to produce a configure script.
AC_INIT(base64.c)
AC_CONFIG_HEADER(config.h)
AC_PREFIX_DEFAULT(/usr/local)

PRODUCT=base64
VERSION=1.5
AC_DEFINE_UNQUOTED(PRODUCT, "$PRODUCT")
AC_DEFINE_UNQUOTED(VERSION, "$VERSION")
AC_SUBST(PRODUCT)
AC_SUBST(VERSION)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h string.h strings.h)

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AC_CHECK_FUNCS(getopt)

AC_OUTPUT(Makefile)
